--- a/index.html
+++ b/index.html
@@ -1,24 +1,26 @@
 <html lang="en">
+
 <head>
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-197944457-1"></script>
     <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
 
-    gtag('config', 'UA-197944457-1');
+        gtag('config', 'UA-197944457-1');
     </script>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>7th JUSC National Math Olympiad</title>
-    <link rel="shortcut icon" type="image/png" href="Copy of JUSC_Transparrent Logo.png"/>
+    <link rel="shortcut icon" type="image/png" href="Copy of JUSC_Transparrent Logo.png" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="final.css">
     <link rel="stylesheet" type="text/css" href="largescreen.css">
     <link rel="stylesheet" type="text/css" href="result.css">
 </head>
+
 <body>
     <div class="container-fluid main">
         <div class="container content">
@@ -33,7 +35,8 @@
                 </div>
             </div>
             <div class="row ins">
-                <p id="instruction">Before entering the exam you must read the <a href="instructions.html" target="_blank">Exam Instructions</a></p>
+                <p id="instruction">Before entering the exam you must read the <a href="instructions.html"
+                        target="_blank">Exam Instructions</a></p>
             </div>
             <div class="row link-text">
                 <p>Exam Link-</p>
@@ -41,22 +44,29 @@
             <div class="row">
                 <div class="col links">
                     <div class="row cat-link">
-                        <a href="https://testmoz.com/q/9005246" target="_blank" >Class: Six-Eight (Category A)</a>
+                        <a href="https://testmoz.com/q/9005246" target="_blank">Class: Six-Eight (Category A)</a>
                     </div>
                     <div class="row cat-link">
-                        <a href="https://testmoz.com/9005258" target="_blank" >Class: Nine-Ten (Category B)</a>
+                        <a href="https://testmoz.com/9005258" target="_blank">Class: Nine-Ten (Category B)</a>
                     </div>
                     <div class="row cat-link">
-                        <a href="#" target="_blank" >Class: Eleven-Twelve (Category C)</a>
+                        <a href="#" target="_blank">Class: Eleven-Twelve (Category C)</a>
                     </div>
                 </div>
             </div>
+
+            <div class="row">
+                <a id="result-link" href="final-result.html" target="_blank">Click here to see the Winners</a>
+            </div>
+
             <div class="row">
                 <a id="result-link" href="result.html" target="_blank">Click here for Result</a>
             </div>
             <div class="row organizer">
                 <div class="col jusc">Organized By-</div>
-                <div class="logo"><img id="club-logo" src="Copy of JUSC_Transparrent Logo.png" width="100px"><p id="club-name">Jahangirnagar University Science Club</p></div>
+                <div class="logo"><img id="club-logo" src="Copy of JUSC_Transparrent Logo.png" width="100px">
+                    <p id="club-name">Jahangirnagar University Science Club</p>
+                </div>
             </div>
             <div class="row flex-box flex-box-logo">
                 <div class="col-sm-3 col-6 txt-line">
@@ -87,9 +97,10 @@
             <div class="row">
                 <p id="footer">Powered by Technical Team, JUSC</p>
             </div>
-            
+
         </div>
         <p id="credits">©2021 Jahangirnagar University Science club</p>
     </div>
 </body>
+
 </html>
