--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
             </div>
 
             <div class="row">
-                <a id="result-link" href="final-result.html" target="_blank">Click here to see the Winners</a>
+                <a class="result-link" href="final-result.html" target="_blank">Click here to see the Winners</a>
             </div>
 
             <div class="row">
-                <a id="result-link" href="result.html" target="_blank">Click here for Result</a>
+                <a class="result-link" href="result.html" target="_blank">Click here for Result</a>
             </div>
             <div class="row organizer">
                 <div class="col jusc">Organized By-</div>
