--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <link rel="stylesheet" type="text/css" href="final.css">
     <link rel="stylesheet" type="text/css" href="largescreen.css">
     <link rel="stylesheet" type="text/css" href="result.css">
+    <link rel="stylesheet" type="text/css" href="finalResult.css">
 </head>
 
 <body>
